changed username references

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -1,5 +1,5 @@
 authors:
-  shirakoslurper:
+  singlepatient:
     name: Pasha
     description: thoughts person
     avatar: ../assets/shirakoslurper.png
